@@ -23,7 +23,7 @@ public class CanaryConfig implements Config {
     public static final String METRICS_PORT = "metrics.port";
     public static final String METRICS_PATH = "metrics.path";
     public static final String METRICS_FILTER_ENABLE = "metrics.filter.enable";
-    public static final String METRICS_FILTER_PREFIX = "%s\\[\\d+\\]".formatted(METRICS_FILTER_ENABLE);
+    public static final String METRICS_FILTER_PREFIX = "%s.".formatted(METRICS_FILTER_ENABLE);
     public static final String METRONOME_WORKER_ENABLE = "metronome.worker.enable";
     public static final String AGGREGATOR_STORE_RETENTION_MS = "aggregator.store.retention.ms";
     public static final String TOPIC_CREATION_TIMEOUT_MS = "topic.creation.timeout.ms";
@@ -135,10 +135,10 @@ public class CanaryConfig implements Config {
 
     public List<String> getEnabledMetrics() {
         return configs.entrySet().stream()
-                .filter(entry -> entry.getKey().matches(METRICS_FILTER_PREFIX))
-                .map(Entry::getValue)
-                .map(Object::toString)
-                .toList();
+                .filter(entry -> entry.getKey().startsWith(METRICS_FILTER_PREFIX))
+                .filter(entry -> Boolean.parseBoolean(entry.getValue().toString()))
+                .map(entry -> entry.getKey().substring(METRICS_FILTER_PREFIX.length()))
+                .collect(Collectors.toList());
     }
 
     public Map<String, Object> getCommonTags() {
